# OmniPresence

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: ActiveWindowWatcher.h  AppController.h  ArtStore.h  ConfigStore.h  CustomOverride.h  DiscordPresenceClient.h  FocusDebouncer.h  InputIdleMonitor.h  IntegrationContext.h  LocalContextServer.h  NamedPipeInterceptor.h  PresencePayload.h  Rule.h  RuleEngine.h  SkillLabel.h  StubActiveWindowWatcher.h  TemplateEngine.h  Win32ActiveWindowWatcher.h  WindowInfo.h
app/qml/: AssetManager.qml  CapturePage.qml  CustomPage.qml  Dashboard.qml  LogsPage.qml  Main.qml  PreviewPage.qml  PrivacyPage.qml  RulesPage.qml
app/resources/: README.md  app.rc
app/src/: ActiveWindowWatcher.cpp  AppController.cpp  ArtStore.cpp  ConfigStore.cpp  CustomOverride.cpp  DiscordPresenceClient.cpp  FocusDebouncer.cpp  InputIdleMonitor.cpp  IntegrationContext.cpp  LocalContextServer.cpp  NamedPipeInterceptor.cpp  PresencePayload.cpp  Rule.cpp  RuleEngine.cpp  SkillLabel.cpp  StubActiveWindowWatcher.cpp  TemplateEngine.cpp  Win32ActiveWindowWatcher.cpp  discord_sdk_impl.cpp  main.cpp
config/: omnipresence.example.json
docs/: DECISIONS.md  DISCORD_SETUP.md  GRAPHIFY.md  INTEGRATIONS.md  PLAN.md  PRIVACY.md  SPEC.md
docs/superpowers/plans/: 2026-06-21-presence-ux-simplification.md  2026-06-21-rule-editor-presence-polish.md  2026-06-21-runelite-ipc-interception-republish.md  2026-07-17-runelite-afk-idle-presence.md
docs/superpowers/specs/: 2026-06-21-presence-ux-simplification-design.md  2026-06-21-rule-editor-presence-polish-design.md  2026-06-21-runelite-ipc-interception-republish-design.md  2026-07-17-runelite-afk-idle-presence-design.md
integrations/browser-extension/: README.md  background.js  categories.js  manifest.json  options.html  options.js  popup.html  popup.js
integrations/runelite/omnipresence-runelite-plugin/: README.md  build.gradle  runelite-plugin.properties  settings.gradle
integrations/runelite/omnipresence-runelite-plugin/src/main/java/com/omnipresence/: ActivityInferencer.java  ContextPublisher.java  OmniPresenceConfig.java  OmniPresencePlugin.java
integrations/runelite/omnipresence-runelite-plugin/src/main/java/com/omnipresence/dto/: RuneLiteContext.java
integrations/runelite/omnipresence-runelite-plugin/src/test/java/com/omnipresence/: ActivityInferencerTest.java
integrations/terminal/: OmniPresence.Terminal.psm1  README.md  profile-snippet.ps1
integrations/vscode/: README.md  package-lock.json  package.json  tsconfig.json
integrations/vscode/src/: extension.ts
scripts/: CMakeLists.txt  build-windows.ps1  graphify-build  graphify-query  graphify-refresh  launch-stack.bat  make-placeholder-art.cpp  setup-dev.ps1  setup-dev.sh
scripts/spike/: discord-ipc-sniff.ps1
tests/: CMakeLists.txt  README.md  test_art_store.cpp  test_config_assets.cpp  test_rule_engine_render.cpp  test_skill_label.cpp  test_template_engine.cpp
tools/graphify/: README.md
